gcc/testsuite/gdc.test/compilable/imports/ice13403a.d
module imports.ice13403a;

package(imports):

template BacktrackingMatcher()
{
}
