gcc/testsuite/gdc.test/fail_compilation/imports/import15525.d
module imports.import15525;

template Tuple{ static if }
